# AdventOfCode24

./: .gitignore  CMakeLists.txt  README.md  control.c  control.h  day01.c  day01.h  main.c  utils.c  utils.h
common/: matrix_map.c  matrix_map.h  point.c  point.h  set.c  set.h  utils.c  utils.h
day_01/: day01.c  day01.h
day_02/: day02.c  day02.h
day_03/: day03.c  day03.h  day03_part1.c  day03_part1.h  day03_part2.c  day03_part2.h  instruction.c  instruction.h
day_04/: day04.c  day04.h  day04_part1.c  day04_part1.h  day04_part2.c  day04_part2.h  day04_utils.c  day04_utils.h  file_day04.c  file_day04.h
day_05/: day05.c  day05.h  day05_part1.c  day05_part1.h  day05_part2.c  day05_part2.h  day05_utils.c  day05_utils.h
day_06/: day06.c  day06.h  day06_agent.c  day06_agent.h  day06_agent_map.c  day06_agent_map.h  day06_map.c  day06_map.h
day_07/: day07.c  day07.h  day07_calibration.c  day07_calibration.h
day_08/: day08.c  day08.h  day08_antenna_group.c  day08_antenna_group.h
day_09/: day09.c  day09.h
